--- a/googlemap/googleMap.html
+++ b/googlemap/googleMap.html
@@ -17,5 +17,6 @@
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://maps.google.com/maps/api/js"></script>
-<script type="text/javascript" src="/resources/js/Google.js"></script>
+<script type="text/javascript" src="/resources/js/googleMapApi.js"></script>
 <script type="text/javascript" src="/resources/js/googleMap.js"></script>
+<!-- <script type="text/javascript" src="/resources/js/mapMarker.js"></script> -->
