--- a/googleMapOnPredix/public/index.html
+++ b/googleMapOnPredix/public/index.html
@@ -3,23 +3,19 @@
 <head>
   <title>Security Starter Application</title>
   <link rel="stylesheet" href="stylesheets/style.css"></link>
+  <link rel="stylesheet" href="stylesheets/app.css"></link>
 </head>
 <body>
   <div class="header">
-    <h2>My First Predix Sample Application</h2>
-    <h4>Predix Developer Kit</h4>
-  </div>
-  <div class="container">
-    <p>This sample app shows how a basic web application works with Predix UAA.</p>
+  <h1>Melbourne Outage Analysis</h1>
+    <h4>Predix Challenge Team</h4>
+    </div>
+    
+    <div class="container">
 
-    <ul>
-      <li>
-        <a href="/login?state=secure">Login</a>
-      </li
-      <li>
-        <a href="/secure">Secure Page</a>
-      </li>
-    </ul>
+    <a  type="button" href="login?state=secure" class="login-btn">Login</a>
+    <a href="/secure" class="secure-point"></a>
+
   </div>
   <div class="footer">
     <div class="footer-logo-container">
