--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -1,48 +1,80 @@
 
-<link rel="stylesheet" href="../stylesheets/leaflet.css" />
-<link rel="stylesheet" href="../stylesheets/style.css" />
-<link rel="stylesheet" href="../stylesheets/predix.css" />
-<link rel="stylesheet" href="../stylesheets/piechartviewer.css" />
-
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 <head>
-	<title>Google Map</title>
+	<title>Melbourne Outage Analysis</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+	<link rel="stylesheet" href="../stylesheets/leaflet.css" />
+	<link rel="stylesheet" href="../stylesheets/style.css" />
+	<link rel="stylesheet" href="../stylesheets/predix.css" />
+	<link rel="stylesheet" href="../stylesheets/piechartviewer.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/tabviewer.css">
+
 </head>
-	<body>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+  		<div class="container-fluid">
+    		<div class="navbar-header">
+      			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span> 
+      			</button>
+      			<a class="navbar-brand" href="#">Melbourne Outage Analysis</a>
+    		</div>
+    		<div class="collapse navbar-collapse" id="myNavbar">
+      			<ul class="nav navbar-nav">
+        			<li><a href="index.html">Home</a></li>
+        			<li class="active"><a href="login?state=secure">Analysis</a></li>
+      			</ul> 
+    		</div>
+  		</div>
+	</nav>
 
-		<center><div class="loader"></div></center>
+	<center><div class="loader"></div></center>
+	
 
-		<div>
+		<div class="container_2">
+			<div class="row">
 
-			<div id="map" class="map hidden" ></div>
-			<div id="pieChartContainer"></div>
-
-
+		  		<div class="col-md-8" >
+					<div id="map" class="myhidden"></div>
+				</div>
+		  		<div class="col-md-4" >
+					<div id="pieChartContainer"></div>
+				</div>
+			</div>
 		</div>
-	</body>
+
+		<div id="tableContainer" style="position: relative;"></div>
+
+</body>
 </html>
 
 
-
+<script src="../scripts/leaflet.js"></script>
+<script src="../scripts/tableViewer.js" charset="utf-8"></script>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="../scripts/leaflet.js"></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="https://maps.google.com/maps/api/js?language=en"></script>
 <script type="text/javascript" src="../scripts/googleMapApi.js"></script>
-
 <script type="text/javascript" src="../scripts/pieChartViewer.js"></script>
 
-
+<script type="text/javascript" src="../scripts/googleMap.js"></script>
 
 <script charset="utf-8">
 
-
     var column = "name";
 
-    var canvas = { width:500, height:500};
+    var canvas = { width: 472, height: 472};
 
     var catrgories = {property:"cause",type: [
 		"Condition Deterioration",
@@ -74,8 +106,13 @@
         pieChart = new pieChartViewer($("#pieChartContainer")[0], canvas ,randDataGenerated , column, name, catrgories);
 
 
+        tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
+
+        
+
     });
 
 </script>
 
-<script type="text/javascript" src="../scripts/googleMap.js"></script> 
+
+
