--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -36,7 +36,8 @@
     		</div>
   		</div>
 	</nav>
-
+	
+	<div class="mybackgroundHeader"></div>
 	<center><div class="loader"></div></center>
 	
 
