add aspect to linechart

--- a/googleMapOnPredix/public/index.html
+++ b/googleMapOnPredix/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Security Starter Application</title>
-  <link rel="stylesheet" href="stylesheets/style.css"></link>
+  <link rel="stylesheet" href="stylesheets/stl.css"></link>
   <link rel="stylesheet" href="stylesheets/app.css"></link>
 </head>
 <body>
