--- a/googleMapOnPredix/myhtml/googleMap.html
+++ b/googleMapOnPredix/myhtml/googleMap.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
 	<link rel="stylesheet" href="../stylesheets/leaflet.css" />
-	<link rel="stylesheet" href="../stylesheets/style.css" />
+	<link rel="stylesheet" href="../stylesheets/stl.css" />
 	<link rel="stylesheet" href="../stylesheets/predix.css" />
 	<link rel="stylesheet" href="../stylesheets/piechartviewer.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -113,11 +113,9 @@
 	
 	    var pieChart = new pieChartViewer($("#pieChartContainer")[0], null ,data , column, stationName, catrgories);
 
-	    //tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
+	    var aspect = 4;//width/height
 
-	    var setting = {"width":800,"height":400};
-
-	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName);
+	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, null, aspect);
 
 	    var myGoogleMap = new googleMap();
 
