--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../stylesheets/leaflet.css" />
-	<link rel="stylesheet" href="../stylesheets/style.css" />
+	<link rel="stylesheet" href="../stylesheets/stl.css" />
 	<link rel="stylesheet" href="../stylesheets/predix.css" />
 	<link rel="stylesheet" href="../stylesheets/piechartviewer.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -113,7 +113,8 @@
 
 	    var setting = {"width":800,"height":400};
 
-	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName);
+	    var aspect = 7;//width/height
+	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, null, aspect);
 
 	    var myGoogleMap = new googleMap();
 
