--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <html  lang="en">
 <head>
 	<title>Melbourne Outage Analysis</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
 	<link rel="stylesheet" href="../stylesheets/leaflet.css" />
 	<link rel="stylesheet" href="../stylesheets/stl.css" />
 	<link rel="stylesheet" href="../stylesheets/predix.css" />
@@ -13,10 +13,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/tabviewer.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/tabviewer.css">
     <link rel="stylesheet" href="../stylesheets/lineChart.css">
-</head>
 
+</head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
   		<div class="container-fluid">
@@ -30,85 +30,60 @@
     		</div>
     		<div class="collapse navbar-collapse" id="myNavbar">
       			<ul class="nav navbar-nav">
-        			<li><a href="index.html">Home</a></li>
-        			<li class="active"><a href="login?state=secure">Analysis</a></li>
-      			</ul> 
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="login?state=secure">Outage Analysis</a></li>
+				<li><a href="#">Field Crew Dispatch</a></li>
+				<li><a href="#">Financial Forecast</a></li>
+				<li><a href="#">Asset Profile</a></li>
+            </ul> 
+			<ul class="nav navbar-nav navbar-right">
+      			<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
+    		</ul>
     		</div>
   		</div>
 	</nav>
+	
 
-
-	<!--<center><div class="loader"></div></center>-->
+<!-- 	<center><div class="loader"></div></center> -->
 	<div class="container_2">
 	<div class="row" style="padding: 0; margin: 0;">
   		<div class="col-sm-8" style="padding: 0; margin: 0;">
 			<div id="map"></div>
+			<h3>Customer Effectived over all Year</h3>
+			<div id="lineChartContainer"></div>
 		</div>
   		<div class="col-sm-4" style="padding: 0; margin: 0;">
+			<h3>Total Outages</h3>
 			<div id="pieChartContainer"></div>
 			
 		</div>
 	</div>
 	</div>
 
-	<div class="container_3">
-	<div class="row" style="padding: 0; margin: 0;">
-  		<div class="col-sm-12" style="padding: 0; margin: 0;">
-			<div id="lineChartContainer"></div>
-		</div>
-	</div>
-	</div>
-      	
-	<!--<div>
-		<table id="dt">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Location</th>
-					<th>NumCustomer</th>
-					<th>Reason</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>a</td>
-					<td>123</td>
-					<td>100</td>
-					<td>asdasjkd</td>
-				</tr>
-				<tr>
-					<td>b</td>
-					<td>1234</td>
-					<td>1000</td>
-					<td>masdasjkd</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>-->
 
-	<div class="footer_2">
-		<div class="footer-logo-container_">
-			<img class="footer-logo_" src="/images/monogram-wdmk.png"></img>
-		</div>
-	</div>
+		<!-- <div id="tableContainer" style="position: relative;"></div> -->
+		
 </body>
 </html>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 <script src="../scripts/leaflet.js"></script>
+<!-- <script src="../scripts/tableViewer.js" charset="utf-8"></script>
+ -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="https://maps.google.com/maps/api/js?language=en"></script>
 <script type="text/javascript" src="../scripts/googleMapApi.js"></script>
 <script type="text/javascript" src="../scripts/pieChartViewer.js"></script>
 <script type="text/javascript" src="../scripts/simpleLineChart.js"></script>
-<script type="text/javascript" src="../scripts/googleMap.js"></script>
+<script type="text/javascript" src="../scripts/googleMap.js"></script> 
 
 <script charset="utf-8">
 
     var column = "name";
 
-    //var canvas = { width: 360, height: 360};
+    /*var canvas = { width: 472, height: 472};*/
 
     var catrgories = {property:"cause",type: [
 		"Condition Deterioration",
@@ -127,44 +102,41 @@
 
     var timeRange = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
 
-    var pieChart;
-    var lineChart;
     d3.tsv("../resources/data/data.tsv", function(error, data) {
-
         if (error) throw error;
 
-        randDataGenerated = [];
-		data.forEach(function(d,i){
-			for(var i =0; i < 30; i++){
-				randDataGenerated.push({"name":d.name,"lat":d.lat,"lng":d.lng,"cause":catrgories.type[Math.round(Math.random()*8)],"month":timeRange[Math.round(Math.random()*11)],"numOfCustomerAffected":Math.round(Math.random()*20)});
-			}
+
+        data.forEach(function(d){
+        		d.numOfCustomerAffected = parseInt(d.numOfCustomerAffected);//parse string to int
+        })
+		
+		var maxDiameter = 480;
+
+	    var pieChart = new pieChartViewer($("#pieChartContainer")[0], 0 ,data , column, stationName, catrgories, 0, maxDiameter);
+
+	    //tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
+
+	    var setting = {"width":800,"height":400};
+
+	    var aspect = 3.5;//width/height
+	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, 0, aspect);
+
+	    var myGoogleMap = new googleMap();
+
+		myGoogleMap.init();
+		myGoogleMap.setChild(pieChart);
+		myGoogleMap.setChild(lineChart);
+		myGoogleMap.draw();
+
+	    d3.select(window)
+			.on("resize", function() {
+				pieChart.onSizeChange();
+				lineChart.onSizeChange();
 		});
 
-        pieChart = new pieChartViewer($("#pieChartContainer")[0], null ,randDataGenerated , column, stationName, catrgories);
-
-        //tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
-
-        //var setting = {"width":720,"height":240} ;
-
-        lineChart = new simpleLineChart($("#lineChartContainer")[0], randDataGenerated, stationName);
-		
-		d3.select(window)
-    		.on("resize", function() {
-    			pieChart.onSizeChange();
-    			lineChart.onSizeChange();
-    	});
-
-    });
-
-</script>
-
-<script type="text/javascript" src="../scripts/googleMap.js"></script>
-<script type="text/javascript" src="/scripts/jquery-3.1.0.min.js"></script>
-<script type="text/javascript" src="http://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-
-<script type="text/javascript">
-	$(document).ready(function () {
-		$('#dt').dataTable();
 	});
+
 </script>
+
+
 
