--- a/googleMapOnPredix/public/secure.html
+++ b/googleMapOnPredix/public/secure.html
@@ -1,48 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Security Starter Application</title>
-	<link rel="stylesheet" href="stylesheets/stl.css"></link>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <title>Security Starter Application</title>
+  <link rel="stylesheet" href="stylesheets/style.css"></link>
+  <script src="../scripts/Chart.js"></script>
+  <script src="../scripts/Timeseries.js"></script>
 </head>
+<body onload="configureTagsTimeseriesData();">
+  <div class="header">
+    <h2>My First Predix Sample Application</h2>
+    <h4>Predix Developer Kit</h4>
+  </div>
+  <div class="container">
+    <h2>Welcome to a Secure Page.</h2>
+    <p>This page is gated by the check_token call of UAA.</p>
 
-<body  class="index-body">
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-  		<div class="container-fluid">
-    		<div class="navbar-header">
-      			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span> 
-      			</button>
-      			<a class="navbar-brand" href="#">Melbourne Outage Analysis</a>
-    		</div>
-    		<div class="collapse navbar-collapse" id="myNavbar">
-      			<ul class="nav navbar-nav">
-        			<li class="active"><a href="index.html">Home</a></li>
-        			<li><a href="googleMap.html">Analysis</a></li>
-      			</ul> 
-    		</div>
-  		</div>
-	</nav>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/logout">Logout</a>
+      </li>
+    </ul>
+<!--
+    <h3 id="tag_list_title">Wind Data Microservices Integration</h3>
+    <div class="timeseries_machine_container">
+      <table><tr><td>
+        <p> <b>Select the tags </b></p>
+        <select multiple id="tagList" class='tag-multiple'>
+        </select>
+      </td><td>
+        <p> <b>Select start time</b></p>
+          <select id='start-time' class ='start-time'>
+            <option value="5mi-ago">5mi-ago</option>
+            <option value="15mi-ago">15mi-ago</option>
+            <option value="30mi-ago">30mi-ago</option>
+            <option value="45mi-ago">45mi-ago</option>
+            <option value="45mi-ago">45mi-ago</option>
+            <option value="1h-ago">1h-ago</option>
+            <option value="5h-ago">5h-ago</option>
+            <option value="10h-ago">10h-ago</option>
+            <option value="1d-ago">1d-ago</option>
+            <option value="5d-ago">5d-ago</option>
+            <option value="10d-ago">10d-ago</option>
+            <option value="1w-ago">1w-ago</option>
+            <option value="2w-ago">2w-ago</option>
+            <option value="3w-ago">3w-ago</option>
+            <option value="1mm-ago">1mm-ago</option>
+            <option value="2mm-ago">2mm-ago</option>
+            <option value="3mm-ago">3mm-ago</option>
+            <option value="5mm-ago">5mm-ago</option>
+            <option value="6mm-ago">6mm-ago</option>
+            <option value="8mm-ago">8mm-ago</option>
+            <option value="1y-ago" selected='selected'>1y-ago</option>
+          </select>
 
-	<div class="header_">
-		<h1>This is a secure page.</h1>
-		<h4>Predix Developer Kit</h4>
-	</div>
+      </td><td>
+        <p><b id="predix_asset_table"></b></p>
+        <table id="aTable"></table>
+      </td></tr></table>
+        <button type="button" class="timeseries_button" id="timeseries_button" onclick="onclick_machineServiceData();">Submit</button>
+        <p id="windService_machine_yearly"></p>
+        <div style="width:100%">
+          <h3 id='line_chart_info'></h3>
+          <div id="add_machine_canvas">
+            <p id="windService_machine_tag"></p>
+          </div>
+      </div>
+    </div>
+-->
+    <div class="footer">
+      <div class="footer-logo-container">
+        <img class="footer-logo" src="/images/monogram-wdmk.png"></img>
+      </div>
+    </div>
+  </body>
 
-	<div class="container_">
-		<a  type="button" class="login_btn" href="/">Back</a>
-	</div>
-
-    <div class="footer_">
-		<div class="footer-logo-container_">
-			<img class="footer-logo_" src="/images/monogram-wdmk.png"></img>
-		</div>
-	</div>
-</body>
 </html>
