--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html  lang="en">
 <head>
@@ -13,6 +12,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/tabviewer.css">
     <link rel="stylesheet" href="../stylesheets/lineChart.css">
 
 </head>
@@ -25,38 +25,41 @@
         			<span class="icon-bar"></span>
         			<span class="icon-bar"></span> 
       			</button>
-      			<a class="navbar-brand" href="#">Melbourne Outage Analysis</a>
+      			<a class="navbar-brand" href="#">Outage Analysis-Victoria</a>
     		</div>
     		<div class="collapse navbar-collapse" id="myNavbar">
       			<ul class="nav navbar-nav">
-        			<li><a href="index.html">Home</a></li>
-        			<li class="active"><a href="login?state=secure">Analysis</a></li>
-      			</ul> 
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="login?state=secure">Outage Analysis</a></li>
+				<li><a href="#">Field Crew Dispatch</a></li>
+				<li><a href="#">Financial Forecast</a></li>
+				<li><a href="#">Asset Profile</a></li>
+            </ul> 
+			<ul class="nav navbar-nav navbar-right">
+      			<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
+    		</ul>
     		</div>
   		</div>
 	</nav>
 	
 
-	<center><div class="loader"></div></center>
+<!-- 	<center><div class="loader"></div></center> -->
 	<div class="container_2">
 	<div class="row" style="padding: 0; margin: 0;">
   		<div class="col-sm-8" style="padding: 0; margin: 0;">
 			<div id="map"></div>
+			<h3>Customer affected over a year</h3>
+			<div id="lineChartContainer"></div>
 		</div>
   		<div class="col-sm-4" style="padding: 0; margin: 0;">
+			<h3>Total Outages</h3>
 			<div id="pieChartContainer"></div>
-			
+			<div id="tooltipContainer"></div>
 		</div>
 	</div>
 	</div>
 
-	<div class="container_3">
-	<div class="row" style="padding: 0; margin: 0;">
-  		<div class="col-sm-12" style="padding: 0; margin: 0;">
-			<div id="lineChartContainer"></div>
-		</div>
-	</div>
-	</div>
+
 		<!-- <div id="tableContainer" style="position: relative;"></div> -->
 		
 </body>
@@ -64,7 +67,10 @@
 
 
 <script src="../scripts/leaflet.js"></script>
+<!-- <script src="../scripts/tableViewer.js" charset="utf-8"></script>
+ -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="https://maps.google.com/maps/api/js?language=en"></script>
 <script type="text/javascript" src="../scripts/googleMapApi.js"></script>
@@ -73,12 +79,9 @@
 <script type="text/javascript" src="../scripts/googleMap.js"></script> 
 
 <script charset="utf-8">
-
-	var column = "name";
-
-	/*var canvas = { width: 472, height: 472};*/
-
-	var catrgories = {property:"cause",type: [
+    var column = "name";
+    /*var canvas = { width: 472, height: 472};*/
+    var catrgories = {property:"cause",type: [
 		"Condition Deterioration",
 		"Electrical Overload",
 		"Wind",
@@ -88,42 +91,30 @@
 		"Programmed Outage",
 		"Human error",
 		"Other Miscellaneous"
-	]};
-
-
-	var stationName = "Altona Power Station";
-
-	var timeRange = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
-
-	d3.tsv("../resources/data/data.tsv", function(error, data) {
-
-
-		data.forEach(function(d){
-				d.numOfCustomerAffected = parseInt(d.numOfCustomerAffected);//parse string to int
-		})
-		        if (error) throw error;
-
+    ]};
+    var stationName = "Altona Power Station";
+    var timeRange = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
+    d3.tsv("../resources/data/data.tsv", function(error, data) {
+        if (error) throw error;
+        data.forEach(function(d){
+        		d.numOfCustomerAffected = parseInt(d.numOfCustomerAffected);//parse string to int
+        })
+		
 		var maxDiameter = 480;
-		var pieChart = new pieChartViewer($("#pieChartContainer")[0], 0 ,data , column, stationName, catrgories, 0, maxDiameter);
-
-		var aspect = 5;//width/height
-		var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, 0, aspect);
-
-		var myGoogleMap = new googleMap();
+	    var pieChart = new pieChartViewer($("#pieChartContainer")[0], 0 ,data , column, stationName, catrgories, 0, maxDiameter, $("#tooltipContainer")[0]);
+	    //tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
+	    var setting = {"width":800,"height":400};
+	    var aspect = 3.5;//width/height
+	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, 0, aspect);
+	    var myGoogleMap = new googleMap();
 		myGoogleMap.init();
 		myGoogleMap.setChild(pieChart);
 		myGoogleMap.setChild(lineChart);
 		myGoogleMap.draw();
-
-		d3.select(window)
+	    d3.select(window)
 			.on("resize", function() {
 				pieChart.onSizeChange();
 				lineChart.onSizeChange();
 		});
-
 	});
-
 </script>
-
-
-
