--- a/googleMapOnPredix/public/googleMap.html
+++ b/googleMapOnPredix/public/googleMap.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html  lang="en">
 <head>
@@ -26,7 +25,7 @@
         			<span class="icon-bar"></span>
         			<span class="icon-bar"></span> 
       			</button>
-      			<a class="navbar-brand" href="#">Melbourne Outage Analysis</a>
+      			<a class="navbar-brand" href="#">Outage Analysis-Victoria</a>
     		</div>
     		<div class="collapse navbar-collapse" id="myNavbar">
       			<ul class="nav navbar-nav">
@@ -49,13 +48,13 @@
 	<div class="row" style="padding: 0; margin: 0;">
   		<div class="col-sm-8" style="padding: 0; margin: 0;">
 			<div id="map"></div>
-			<h3>Customer Effectived over all Year</h3>
+			<h3>Customer affected over a year</h3>
 			<div id="lineChartContainer"></div>
 		</div>
   		<div class="col-sm-4" style="padding: 0; margin: 0;">
 			<h3>Total Outages</h3>
 			<div id="pieChartContainer"></div>
-			
+			<div id="tooltipContainer"></div>
 		</div>
 	</div>
 	</div>
@@ -80,11 +79,8 @@
 <script type="text/javascript" src="../scripts/googleMap.js"></script> 
 
 <script charset="utf-8">
-
     var column = "name";
-
     /*var canvas = { width: 472, height: 472};*/
-
     var catrgories = {property:"cause",type: [
 		"Condition Deterioration",
 		"Electrical Overload",
@@ -96,47 +92,37 @@
 		"Human error",
 		"Other Miscellaneous"
     ]};
-
-
     var stationName = "Altona Power Station";
-
     var timeRange = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
-
     d3.tsv("../resources/data/data.tsv", function(error, data) {
         if (error) throw error;
-
-
         data.forEach(function(d){
         		d.numOfCustomerAffected = parseInt(d.numOfCustomerAffected);//parse string to int
         })
 		
 		var maxDiameter = 480;
+	    var pieChart = new pieChartViewer($("#pieChartContainer")[0], 0 ,data , column, stationName, catrgories, 0, maxDiameter, $("#tooltipContainer")[0]);
 
-	    var pieChart = new pieChartViewer($("#pieChartContainer")[0], 0 ,data , column, stationName, catrgories, 0, maxDiameter);
+	    
+	    var htmlfortooltip_example = "<label class='pie_label'></label> accounts for <label class='pie_percentage'></label> of total outages of <label class='pie_stationName'></label> and it happens <label class='pie_count'></label> times last year, which leads to a loss of<br /> <label class='pie_totalCost'></label> ";
+	    //you can change anything inside the tooltip using this function
+	    pieChart.changeTooltip(htmlfortooltip_example);
+
+
 
 	    //tabViewer = new TABViewer($("tableContainer")[0], {}, randDataGenerated, name);
-
 	    var setting = {"width":800,"height":400};
-
 	    var aspect = 3.5;//width/height
 	    var lineChart = new simpleLineChart($("#lineChartContainer")[0], data, stationName, 0, aspect);
-
 	    var myGoogleMap = new googleMap();
-
 		myGoogleMap.init();
 		myGoogleMap.setChild(pieChart);
 		myGoogleMap.setChild(lineChart);
 		myGoogleMap.draw();
-
 	    d3.select(window)
 			.on("resize", function() {
 				pieChart.onSizeChange();
 				lineChart.onSizeChange();
 		});
-
 	});
-
 </script>
-
-
-
